--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="flex justify-between bg-indigo-950 w-full h-32 m-0">
     <div class="2xl:ml-32 my-auto lg:ml-20 xl:ml-32 md:ml-16 sm:ml-10 ml-5">
-        <a href="/project/Privacy Policy/privacy_policy.html" class="text-white 2xl:text-4xl font-bold lg:text-3xl xl:text-4xl md:text-2xl sm:text-xl text-lg">{Finsweet</a>
+        <a href="privacy_policy.html" class="text-white 2xl:text-4xl font-bold lg:text-3xl xl:text-4xl md:text-2xl sm:text-xl text-lg">{Finsweet</a>
     </div>
     <div class="flex 2xl:mr-32 my-auto 2xl:text-xl text-white font-normal items-center lg:text-lg lg:mr-12 xl:text-xl xl:mr-32 md:text-base md:mr-8 sm:text-sm sm:mr-4 mr-0 text-xs">
         <a href="index.html" class="2xl:mr-16 lg:mr-10 xl:mr-12 md:mr-6 sm:mr-2 mr-1">Home</a>
@@ -413,12 +413,12 @@
               <a  href="/project/Read Blog/Read_Blog.html" class="font-medium 2xl:ml-32 lg:ml-20 xl:ml-24 md:ml-16 sm:ml-10 ml-2">Copyright 2021, Finsweet.com</a>
           </div>
           <div class="font-medium mr-16 lg:mr-10 xl:mr-14 md:mr-6 sm:mr-2">
-              <a href="/project//Home/public/index.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Home</a>
-              <a href="/project//About us/public/index.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">About us</a>
-              <a href="/project//Features/feature.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Feature</a>
-              <a href="/project//Pricing/price.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Pricing</a>
-              <a href="/project/Read Case Studies/Read_case.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">FAQ</a>
-              <a href="/project//Blog Page/Blog_Page.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Blog</a>
+              <a href="index.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Home</a>
+              <a href="about_us.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">About us</a>
+              <a href="feature.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Feature</a>
+              <a href="price.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Pricing</a>
+              <a href="Read_case.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">FAQ</a>
+              <a href="Blog_Page.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Blog</a>
           </div>
       </div>
   </div>
