--- a/work.html
+++ b/work.html
@@ -213,26 +213,26 @@
         </div>
         <div class="down_footer">
             <div class="logo_nav" style="font-weight: bold;">
-                <a href="../Work/work.html" class="title_header">Copyright 2021, Finsweet.com</a>
+                <a href="work.html" class="title_header">Copyright 2021, Finsweet.com</a>
             </div>
             <nav class="list_nav">
                 <li>
-                    <a href="../Home/public/index.html">Home</a>
+                    <a href="index.html" target="_self">Home</a>
                 </li>
                 <li>
-                    <a href="../About us/public/index.html">About us</a>
+                    <a href="about_us.html">About us</a>
                 </li>
                 <li>
-                    <a href="../Features/feature.html">Features</a>
+                    <a href="feature.html" target="_self">Features</a>
                 </li>
                 <li>
-                    <a href="../Pricing/price.html">Pricing</a>
+                    <a href="price.html">Pricing</a>
                 </li>
                 <li>
-                    <a href="../Read Case Studies/Read_case.html">FAQ</a>
+                    <a href="Read_case.html">FAQ</a>
                 </li>
                 <li>
-                    <a href="../Blog Page/Blog_Page.html">Blog</a>
+                    <a href="Blog_Page.html">Blog</a>
                 </li>
             </nav>
         </div>
