--- a/about_us.html
+++ b/about_us.html
@@ -357,7 +357,7 @@
             </div>
             <div class="flex flex-row bg-white justify-between text-black p-10">
                 <div>
-                    <a href="/project/Read Blog/Read_Blog.html"class="font-medium 2xl:ml-32 lg:ml-20 xl:ml-24 md:ml-16 sm:ml-10 ml-2">Copyright 2021, Finsweet.com</a>
+                    <a href="Read_Blog.html"class="font-medium 2xl:ml-32 lg:ml-20 xl:ml-24 md:ml-16 sm:ml-10 ml-2">Copyright 2021, Finsweet.com</a>
                 </div>
                 <div class="font-medium mr-16 lg:mr-10 xl:mr-14 md:mr-6 sm:mr-2">
                     <a href="index.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Home</a>
