--- a/feature.html
+++ b/feature.html
@@ -43,7 +43,7 @@
             <div class="feature_title">
                 <h1>All the features you need</h1><br><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><br><br>
-                <input type="submit" value="View Pricing" src="../Pricing/price.html">
+                <input type="submit" value="View Pricing" src="price.html">
             </div>
             <div class="feature_img">
                 <img src="./img/Screenshot (11).png" alt="">
