--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <h1 class="font-bold 2xl:text-6xl leading-tight xl:text-5xl lg:text-4xl md:text-3xl sm:text-2xl text-xl">Building stellar<br>websites for early<br>startups</h1><br>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br>eiusmod tempor incididunt.</p><br><br>
         <div class="flex flex-row items-center">
-          <a href="#" class="2xl:px-16 2xl:py-4 bg-yellow-300 font-bold xl:text-sm text-xs rounded-full text-black mr-12 xl:px-14 xl:py-3
+          <a href="work.html" class="2xl:px-16 2xl:py-4 bg-yellow-300 font-bold xl:text-sm text-xs rounded-full text-black mr-12 xl:px-14 xl:py-3
           lg:px-12 lg:py-2 md:px-10 md:py-1 sm:px-8 sm:py-0 py-0 px-4">View our work</a>
-          <a href="#" class="text-white">View Pricing</a>
+          <a href="price.html" class="text-white">View Pricing</a>
         </div>
       </div>
       <div class="flex">
@@ -41,7 +41,7 @@
       <div class="flex flex-col 2xl:ml-32 my-56 xl:ml-28 lg:ml-24 md:ml-20 sm:ml-16 ml-8">
         <h2 class="2xl:text-5xl font-bold xl:text-4xl lg:text-3xl md:text-2xl sm:text-xl text-lg">How we work</h2><br>
         <p class="2xl:text-lg md:text-base sm:text-sm text-xs">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit, sed do eiusmod tempor.</p><br>
-        <a href="#" class="font-bold text-purple-800 md:text-xl sm:text-lg text-base">Get in touch with us</a>
+        <a href="contact_us.html" class="font-bold text-purple-800 md:text-xl sm:text-lg text-base">Get in touch with us</a>
       </div>
       <div class="grid grid-cols-2 2xl:mr-44 mt-24 2xl:gap-24 xl:mr-40 xl:gap-20 lg:mr-36 lg:gap-16 md:mr-32 md:gap-14 sm:mr-28 sm:gap-10 mr-12 gap-4">
         <div class="flex flex-col">
@@ -243,7 +243,7 @@
     <div class="w-full flex flex-row justify-between">
       <div class="flex flex-col 2xl:ml-44 mt-28 xl:ml-32 lg:ml-24 md:ml-16 sm:ml-10 ml-5">
         <h3 class="2xl:text-4xl leading-tight font-bold xl:text-3xl lg:text-2xl md:text-xl sm:text-lg text-base">Frequently<br>asked questions</h3><br>
-        <a href="#" class="font-medium text-purple-800">Contact us for more info</a>
+        <a href="contact_us.html" class="font-medium text-purple-800">Contact us for more info</a>
       </div>
       <div class="flex flex-col mt-28 2xl:ml-44 mb-28 2xl:mr-44 xl:ml-32 xl:mr-32 lg:ml-24 lg:mr-24 md:ml-16 md:mr-16 sm:ml-10 sm:mr-10 ml-5 mr-5">
         <div class="flex flex-row justify-between w-96 items-center">
@@ -311,7 +311,7 @@
         <input type="text" class="bg-transparent h-16 border-gray-500 placeholder-gray-500 border rounded-xl" placeholder="    Paste your Figma design URL"><br>
         <div class="flex flex-col mx-auto items-center">
           <a href="#" class="font-semibold bg-yellow-300 py-5 px-32 rounded-full xl:py-4 xl:px-28 lg:py-3 lg:px-24 md:py-2 md:px-20 sm:py-1 sm:px-14">Send an Inquiry</a><br>
-          <a href="#" class="text-white">Get in touch with us</a>
+          <a href="contact_us.html" class="text-white">Get in touch with us</a>
         </div>
       </div>
     </div>
@@ -410,7 +410,7 @@
       </div>
       <div class="flex flex-row bg-white justify-between text-black p-10">
           <div>
-              <a  href="/project/Read Blog/Read_Blog.html" class="font-medium 2xl:ml-32 lg:ml-20 xl:ml-24 md:ml-16 sm:ml-10 ml-2">Copyright 2021, Finsweet.com</a>
+              <a  href="Read_Blog.html" class="font-medium 2xl:ml-32 lg:ml-20 xl:ml-24 md:ml-16 sm:ml-10 ml-2">Copyright 2021, Finsweet.com</a>
           </div>
           <div class="font-medium mr-16 lg:mr-10 xl:mr-14 md:mr-6 sm:mr-2">
               <a href="index.html" class="2xl:ml-12 lg:ml-8 xl:ml-10 md:ml-4 sm:ml-2 ml-1">Home</a>
